k8s/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbuasa-ingress
  namespace: sbuasa
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit
                port:
                  number: 8501
